[gd_scene format=3 uid="uid://cl6ih68eeb4ox"]

[ext_resource type="Script" uid="uid://b0tq1hm3eyxfe" path="res://scripts/autoloads/TooltipSystem.gd" id="1_ne664"]
[ext_resource type="Theme" uid="uid://4gdmmmgngu0y" path="res://themes/inventory.tres" id="2_pt5xr"]
[ext_resource type="Texture2D" uid="uid://bpric1nyeu7w3" path="res://textures/ui.png" id="3_tbolh"]
[ext_resource type="FontFile" uid="uid://bbmspah8tojot" path="res://fonts/Alkhemikal_font.tres" id="4_tbolh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbolh"]
bg_color = Color(1, 1, 1, 0.78431374)
draw_center = false
border_color = Color(0.003199997, 0.09727999, 0.16, 0.78431374)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="AtlasTexture" id="AtlasTexture_ut53s"]
atlas = ExtResource("3_tbolh")
region = Rect2(0, 80, 36, 36)

[sub_resource type="Theme" id="Theme_tbolh"]
default_font = ExtResource("4_tbolh")
PanelContainer/styles/panel = null

[node name="tooltip" type="CanvasLayer" unique_id=331667819]
script = ExtResource("1_ne664")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=2119070636]
custom_minimum_size = Vector2(150, 0)
offset_right = 150.0
offset_bottom = 80.0
mouse_filter = 2
theme = ExtResource("2_pt5xr")
theme_override_styles/panel = SubResource("StyleBoxFlat_tbolh")

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer" unique_id=835417320]
layout_mode = 2
texture = SubResource("AtlasTexture_ut53s")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=526758406]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=1815803933]
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_tbolh")
theme_override_constants/separation = 2

[node name="title_label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1559309628]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("4_tbolh")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "???"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="type_label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1817637901]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("4_tbolh")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "???"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="stats_label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1314216438]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("4_tbolh")
text = "stats"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="tip_label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=162446090]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("4_tbolh")
text = "tooltip"
fit_content = true
scroll_active = false
autowrap_mode = 2
